--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ discord.py==1.5.0
 idna==2.10
 idna-ssl==1.1.0
 multidict==4.7.6
+requests==2.24.0
 typing-extensions==3.7.4.3
+urllib3==1.25.10
 wincertstore==0.2
 yarl==1.5.1
