--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,4 @@
-aiohttp==3.6.3
-async-timeout==3.0.1
-attrs==20.2.0
-backcall==0.2.0
-certifi==2020.6.20
-chardet==3.0.4
-colorama==0.4.4
-decorator==4.4.2
-discord.py==1.5.1
-idna==2.10
-idna-ssl==1.1.0
-ipython==7.16.1
-ipython-genutils==0.2.0
-jedi==0.17.2
-jupyter-client==6.1.7
-jupyter-core==4.6.3
-multidict==4.7.6
-parso==0.7.1
-pickleshare==0.7.5
-prompt-toolkit==3.0.8
-Pygments==2.7.2
-python-dateutil==2.8.1
-python-dotenv==0.15.0
-pyzmq==19.0.2
+discord.py==1.5.0
+psycopg2-binary==2.8.6
+python-dotenv==0.14.0
 requests==2.24.0
-six==1.15.0
-tornado==6.0.4
-traitlets==4.3.3
-typing-extensions==3.7.4.3
-urllib3==1.25.11
-wcwidth==0.2.5
-wincertstore==0.2
-yarl==1.5.1
